src/tests/testfiles/unary-operators/types-4.txt
Error at 4:5: Logical not operator operand not compatible with float *
!ff;
^
